Update and add image film