@@ -10,6 +10,7 @@ import java.util.Optional;
 import javax.transaction.Transactional;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -24,6 +25,9 @@ import cinema.store.repository.FilmRepository;
 @CrossOrigin("*")
 public class ImageController {
 
+	@Value("${data.folder}")
+	private String dataFolder;
+	
 	private final FilmRepository filmDao;
 	private final String src = "/Users/asatutterin/eclipse-workspace/CinemaChain/src/main/resources/static/images/";
 	
@@ -41,9 +45,9 @@ public class ImageController {
 		Optional<FilmEntity> film = filmDao.findById(filmId);
 		if(film.isPresent()) {
 			String photoName = film.get().getImage();
-			File file = new File(src
-					+photoName+".jpeg");
-			Path path = Paths.get(file.toURI());
+//			File file = new File(src
+//					+photoName+".jpeg");
+			Path path = Path.of(dataFolder, film.get().getFilmId().toString(), film.get().getImage());
 			return Files.readAllBytes(path);
 		}
 		return null;
